--- a/src/components/ChatPanel.module.scss
+++ b/src/components/ChatPanel.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background: #f7f8fa;
+  width: 100%;
+  max-width: 800px;
+  background: #ffffff;
 }
 
 .messages {
